Upgrade Java version
Upgrade JRE version to avoid messory issues when running on modern containers (`cgroupv2` issue)